# twitter-like-service

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/models/: models.rs
src/services/: api.rs  config.rs  handler.rs  mod.rs
src/types/: end_points.rs  mod.rs  result.rs
