[package]
name = "twitter-like-service"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-std = "1.12.0"
chrono = { version = "0.4.23",  features = ["clock", "std","serde"] }
diesel = { version = "2.0.2", features = ["postgres", "chrono", "serde_json", "uuid","numeric", "r2d2"] }
dotenv = "0.15.0"
failure = "0.1.8"
serde = { version = "1.0.150", features = ["derive"] }
postgres-types = {version = "0.2.4", features = ["derive"]}
bigdecimal = "0.3.0"

uuid = { version = "1.2.2", features = ["serde", "v4"] }
